# soroban-zk

./: .gitignore  CONTRIBUTING.md  FUNDING.json  LICENSE  README.md
.github/workflows/: ci.yml  integration.yml
circuits/poseidon_preimage/: README.md  circuit.circom  input_example.json
circuits/poseidon_preimage/setup/: circuit.zkey  verification_key.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/verifier/testdata/: README.md  valid_public_inputs.json
demo/: .env.example  package-lock.json  package.json  tsconfig.json
demo/src/: run.ts
docs/: architecture.md  poseidon-parameters.md  proof-format.md  zk-primer.md
scripts/: deploy-contract.sh  generate-testnet-keys.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  poseidon.ts  proof.ts  types.ts  verify.ts
sdk/test/: fixtures.ts  poseidon.test.ts  proof.test.ts  verify.integration.ts
